--- a/docs/introduction.mdx
+++ b/docs/introduction.mdx
@@ -161,7 +161,7 @@ We welcome anyone who wishes to be a part of our project and help us achieve our
 
 Our project and documentation is constantly improving and changing. Anything important we post to our [blog](https://www.webiny.com/blog) and our [newsletter](https://landing.mailerlite.com/webforms/landing/g9f1i1).
 
-Additionally you can find useful information on our twitter [@WebinyPlatform](https://twitter.com/WebinyPlatform).
+Additionally, you can find useful information on our twitter handle [@WebinyPlatform](https://twitter.com/WebinyPlatform).
 
 ---
 
