chore: add another PR to the changelog

--- a/docs/release-notes/5.17.0/changelog.mdx
+++ b/docs/release-notes/5.17.0/changelog.mdx
@@ -103,6 +103,12 @@ Webiny can now be integrated with Okta IdP for both the GraphQL API and Admin Ar
 
 ## Other
 
+### Sort Settings for Pages List Element ([#1997](https://github.com/webiny/webiny-js/pull/1997))
+
+In one of the recent releases, we did some updates to the Page Builder GraphQL schema, to use the same naming convention and parameter types across similar queries within Webiny. With that, we've broken the Pages List element within our Page Builder. :cry:
+
+Big shout out to [@dibenso](https://github.com/dibenso) who discovered and fixed this bug :raised_hands: :heart:
+
 ### Menu Component Positioning ([#2006](https://github.com/webiny/webiny-js/pull/2006))
 
 Menu component now positions correctly when rendered at the bottom of the view, and is not being cut off by `overflow: hidden` parent element.
@@ -113,6 +119,7 @@ Menu component now positions correctly when rendered at the bottom of the view, 
 />
 
 Shout out to [@econtentmaps](https://github.com/econtentmaps) for reporting this one :beers:
+
 
 ### Grid/Cell Element Width in the PB Editor ([#1412](https://github.com/webiny/webiny-js/issues/1412))
 
