feat(release-notes): remove api word

--- a/docs/key-topics/headless-cms/lifecycle-events.mdx
+++ b/docs/key-topics/headless-cms/lifecycle-events.mdx
@@ -20,7 +20,7 @@ Lifecycle events using publish/subscribe pattern replace the hook plugins starti
 
 ## Overview
 
-In our Headless CMS API we provide lifecycle events available for you to hook into.
+In our Headless CMS we provide lifecycle events available for you to hook into.
 
 With the lifecycle events you can hook into a number of different operations.
 
