--- a/docs/release-notes/5.18.0/changelog.mdx
+++ b/docs/release-notes/5.18.0/changelog.mdx
@@ -15,7 +15,7 @@ This document highlights the most important fixes, improvements, and features, t
 Please check the [Webiny 5.18.0 migration guide](/docs/release-notes/5.18.0/upgrade-guide) for the upgrade steps.
 :::
 
-## Headless CMS Api
+## Headless CMS
 
 ### A New Way To Hook Into Group, Model or Entry Lifecycle
 
