--- a/docs/release-notes/5.18.0/changelog.mdx
+++ b/docs/release-notes/5.18.0/changelog.mdx
@@ -24,15 +24,15 @@ We removed existing `CmsContentModelHookPlugin` and `CmsContentEntryHookPlugin` 
 To find out more about lifecycle events please read our [Lifecycle Events](/docs/key-topics/headless-cms/lifecycle-events) article.
 
 
-### We Renamed a Lot of Plugins, Types and Interfaces
+### We Renamed a So Plugins, Types and Interfaces
 
 The team agreed on some new namings and to accommodate that we removed Content from all types, interfaces and classes.
 Names for some interfaces were changed a bit as well, for example, `ContentModelGroup` is now `CmsGroup`.
 
-If you have created a Model or a Group via plugins, they are renamed as well.
-`ContentModelPlugin` is now `CmsModelPlugin` and `ContentModelGroupPlugin` is `CmsGroupPlugin` - file names were changed as well.
-
-There are probably a hundred or so types, interfaces and classes changed so listing them all would produce a non-readable piece of text.
+There are probably a hundred or so types, interfaces and classes changed so listing them all would produce a non-readable piece of text, but here are the most important ones:
+* ContentModelPlugin -> CmsModelPlugin
+* ContentModelGroupPlugin -> CmsGroupPlugin
+* CmsModelFieldToStoragePlugin -> StorageTransformPlugin - and it is a class now
 
 :::note
 If you used some of renamed types, interfaces and classes your build/deploy will break, so just change them.
