feat(release-notes): add into about events onBeforeEntryList and onBeforeEntryGet

--- a/docs/key-topics/headless-cms/lifecycle-events.mdx
+++ b/docs/key-topics/headless-cms/lifecycle-events.mdx
@@ -66,6 +66,8 @@ For example, when using [DynamoDB + Elasticsearch](https://github.com/webiny/web
  * onAfterEntryRequestChanges
  * onBeforeEntryRequestReview
  * onAfterEntryRequestReview
+ * onBeforeEntryGet
+ * onBeforeEntryList
 
 
 All the parameters for the events are typed, so it is easy to find out what data is the subscription function receiving.
