fix(changelog): typo in title

--- a/docs/release-notes/5.18.0/changelog.mdx
+++ b/docs/release-notes/5.18.0/changelog.mdx
@@ -24,7 +24,7 @@ We removed existing `CmsContentModelHookPlugin` and `CmsContentEntryHookPlugin` 
 To find out more about lifecycle events please read our [Lifecycle Events](/docs/key-topics/headless-cms/lifecycle-events) article.
 
 
-### We Renamed a So Plugins, Types and Interfaces
+### We Renamed a Lot of Plugins, Types and Interfaces
 
 The team agreed on some new namings and to accommodate that we removed Content from all types, interfaces and classes.
 Names for some interfaces were changed a bit as well, for example, `ContentModelGroup` is now `CmsGroup`.
