--- a/docs/tutorials/install-webiny.mdx
+++ b/docs/tutorials/install-webiny.mdx
@@ -54,19 +54,21 @@ npx create-webiny-project my-new-project
 
 From there, follow the on-screen setup instructions, which includes answering a couple of project-related questions, and doing your first deployment.
 
-### DynamoDB (for Small and Medium Sized Projects)
-As noted, this option should be used if you intend to have a small to medium size project: up to a few hundred records, per application, in the database.
+### Pick Your Database
+
+Webiny supports two storage types at the moment: **DynamoDB** and **DynamoDB+Elasticsearch**.
+Choose which ever suits your needs more. Please, keep reading to find out more about the storage types...
+
+#### DynamoDB (for Small and Medium Sized Projects)
+As noted, this option should be used if you intend to have a small to medium size project: up to a few hundred (even thousands) records, per application, in the database.
 :::note
 Because the DynamoDB does not provide advanced filtering or sorting we had to implement our own.
 :::
 
-Basically, we load the smallest amount of records possible from the DynamoDB and then perform filtering and sorting in the code.
+Basically, we load the smallest amount of records possible from the DynamoDB and then perform filtering and sorting in the code to lower the DynamoDB cost.
 Unfortunately, it might happen that we load all the records from a certain application, depending on the filtering applied, but generally that will not be the case.
 
-Also note that Headless CMS is quite specific application where entries are split through the models. So if you have 5 models with 50 entries each we will, at most, load 50 entries.
-
-
-### DynamoDB + Elasticsearch (for Larger Projects)
+#### DynamoDB + Elasticsearch (for Larger Projects)
 :::danger AWS RESOURCES ARE NOT FREE!
 Although Webiny is using serverless resources, the Elasticsearch option relies on **AWS ElasticsearchService**, which is not free.
 It is the only non-serverless component of our infrastructure and is charged per hour. It amounts to roughly $25/month.
@@ -77,8 +79,7 @@ If you are testing with the Elasticsearch, don't forget to destroy the infrastru
 
 Feel free to choose this option when you want to build some larger application, or you know that you will have a lot of records stored.
 
-DynamoDB + Elasticsearch project has exactly the same functionalities (filtering and sorting) as the DynamoDB one.
-When having a lot of records, it will be faster to search and sort in project deployed with Elasticsearch.
+DynamoDB + Elasticsearch project has exactly the same functionalities (filtering and sorting) as the DynamoDB one but, when having a lot of records, it will be faster to search and sort in the project deployed with Elasticsearch.
 
 
 
