refactor(tutorial): add tabs

--- a/docs/tutorials/install-webiny.mdx
+++ b/docs/tutorials/install-webiny.mdx
@@ -7,6 +7,8 @@ description: Learn how to create a new Webiny project and deploy it into your AW
 ---
 
 import { isWindows } from "react-device-detect";
+import Tabs from '@theme/Tabs';
+import TabItem from '@theme/TabItem';
 
 :::tip WHAT YOU’LL LEARN
 - how to create a brand new Webiny project
@@ -59,16 +61,23 @@ From there, follow the on-screen setup instructions, which includes answering a 
 Webiny supports two storage types at the moment: **DynamoDB** and **DynamoDB+Elasticsearch**.
 Choose which ever suits your needs more. Please, keep reading to find out more about the storage types...
 
-#### DynamoDB (for Small and Medium Sized Projects)
+
+<Tabs>
+  <TabItem value="ddb" label="DynamoDB" default>
 As noted, this option should be used if you intend to have a small to medium size project: up to a few hundred (even thousands) records, per application, in the database.
+
 :::note
+
 Because the DynamoDB does not provide advanced filtering or sorting we had to implement our own.
+
 :::
 
 Basically, we load the smallest amount of records possible from the DynamoDB and then perform filtering and sorting in the code to lower the DynamoDB cost.
 Unfortunately, it might happen that we load all the records from a certain application, depending on the filtering applied, but generally that will not be the case.
 
-#### DynamoDB + Elasticsearch (for Larger Projects)
+  </TabItem>
+  <TabItem value="ddb-es" label="DynamoDB + Elasticsearch">
+
 :::danger AWS RESOURCES ARE NOT FREE!
 Although Webiny is using serverless resources, the Elasticsearch option relies on **AWS ElasticsearchService**, which is not free.
 It is the only non-serverless component of our infrastructure and is charged per hour. It amounts to roughly $25/month.
@@ -80,6 +89,10 @@ If you are testing with the Elasticsearch, don't forget to destroy the infrastru
 Feel free to choose this option when you want to build some larger application, or you know that you will have a lot of records stored.
 
 DynamoDB + Elasticsearch project has exactly the same functionalities (filtering and sorting) as the DynamoDB one but, when having a lot of records, it will be faster to search and sort in the project deployed with Elasticsearch.
+
+  </TabItem>
+</Tabs>
+
 
 
 
