--- a/docs/release-notes/5.18.0/changelog.mdx
+++ b/docs/release-notes/5.18.0/changelog.mdx
@@ -15,6 +15,18 @@ This document highlights the most important fixes, improvements, and features, t
 Please check the [Webiny 5.18.0 migration guide](/docs/release-notes/5.18.0/upgrade-guide) for the upgrade steps.
 :::
 
+## DynamoDB-only Version of Webiny Serverless CMS
+
+The highlight of this release - the new DynamoDB-only version of Webiny!
+
+As the name itself suggests, this new setup completely relies on DynamoDB for storing and retrieving data, making it 100% serverless! You no longer need to have Amazon ElasticSearch in the mix!
+
+This is especially important for smaller to medium-sized projects and also Webiny contributors.
+
+## Development
+
+### Overhaul of Existing Development Tools
+
 ## Headless CMS
 
 ### A New Way To Hook Into Group, Model or Entry Lifecycle
@@ -22,7 +34,6 @@ Please check the [Webiny 5.18.0 migration guide](/docs/release-notes/5.18.0/upgr
 We removed existing `CmsContentModelHookPlugin` and `CmsContentEntryHookPlugin` support in favor of publish/subscribe pattern. Groups did not have lifecycle support, so we added those.
 
 To find out more about lifecycle events please read our [Lifecycle Events](/docs/key-topics/headless-cms/lifecycle-events) article.
-
 
 ### We Renamed a Lot of Plugins, Types and Interfaces
 
@@ -37,3 +48,22 @@ There are probably a hundred or so types, interfaces and classes changed so list
 :::note
 If you used some of renamed types, interfaces and classes your build/deploy will break, so just change them.
 :::
+
+## Page Builder
+
+### Button Page Element - Ability to Register A Custom Callback Handler ([#2022](https://github.com/webiny/webiny-js/pull/2022))
+
+
+## Documentation
+
+### Reorganization of Existing Documentation Articles ([#347](https://github.com/webiny/docs.webiny.com/pull/347))
+
+Based on the feedback we've been getting from our users, we've decided to reorganize our documentation portal.
+
+### Create Custom Application - Security Tutorial ([#340](https://github.com/webiny/docs.webiny.com/pull/340))
+
+We've expanded our existing [Create Custom Application](/docs/tutorials/create-custom-application/introduction) tutorial with the new [Security](#) section!
+
+As the title suggests, in this section we dive deeper into the security aspect of custom application development. We cover implementation of different concepts like authentication, authorization, deploying custom cloud infrastructure resources, [Amazon Cognito User Pools](https://docs.aws.amazon.com/cognito/latest/developerguide/cognito-user-identity-pools.html), and more!
+
+If you're interested in learning more about (serverless) custom application development with Webiny, then we definitely encourage you to check this out.
