--- a/docs/release-notes/5.18.0/changelog.mdx
+++ b/docs/release-notes/5.18.0/changelog.mdx
@@ -15,7 +15,7 @@ This document highlights the most important fixes, improvements, and features, t
 Please check the [Webiny 5.18.0 migration guide](/docs/release-notes/5.18.0/upgrade-guide) for the upgrade steps.
 :::
 
-## DynamoDB-only Version of Webiny Serverless CMS
+## DynamoDB-only Version of Webiny Serverless CMS [WIP]
 
 The highlight of this release - the new DynamoDB-only version of Webiny!
 
