wip: create changelog

--- a/docs/release-notes/5.18.0/changelog.mdx
+++ b/docs/release-notes/5.18.0/changelog.mdx
@@ -27,6 +27,12 @@ This is especially important for smaller to medium-sized projects and also Webin
 
 ### Overhaul of Existing Development Tools
 
+Write this.
+
+### Watch Command - Changed `--logs` Flag
+
+Write this.
+
 ## Headless CMS
 
 ### A New Way To Hook Into Group, Model or Entry Lifecycle
@@ -59,6 +65,12 @@ If you used some of renamed types, interfaces and classes your build/deploy will
 ### Reorganization of Existing Documentation Articles ([#347](https://github.com/webiny/docs.webiny.com/pull/347))
 
 Based on the feedback we've been getting from our users, we've decided to reorganize our documentation portal.
+
+Some of the changes are:
+
+-
+- articles are organized in a way that's more logica
+
 
 ### Create Custom Application - Security Tutorial ([#340](https://github.com/webiny/docs.webiny.com/pull/340))
 
