--- a/docs/release-notes/5.18.0/changelog.mdx
+++ b/docs/release-notes/5.18.0/changelog.mdx
@@ -37,13 +37,13 @@ Write this.
 
 ### A New Way To Hook Into Group, Model or Entry Lifecycle
 
-We removed existing `CmsContentModelHookPlugin` and `CmsContentEntryHookPlugin` support in favor of publish/subscribe pattern. Groups did not have lifecycle support, so we added those.
+We removed existing `InstallationPlugin`, `CmsContentModelHookPlugin` and `CmsContentEntryHookPlugin` support in favor of publish/subscribe pattern. Groups did not have lifecycle support, so we added those.
 
 To find out more about lifecycle events please read our [Lifecycle Events](/docs/key-topics/headless-cms/lifecycle-events) article.
 
 ### We Renamed a Lot of Plugins, Types and Interfaces
 
-The team agreed on some new namings and to accommodate that we removed Content from all types, interfaces and classes.
+The team agreed on some new namings and to accommodate that we removed the `Content` word from all types, interfaces and classes.
 Names for some interfaces were changed a bit as well, for example, `ContentModelGroup` is now `CmsGroup`.
 
 There are probably a hundred or so types, interfaces and classes changed so listing them all would produce a non-readable piece of text, but here are the most important ones:
