feat(changelog): update cms notes

--- a/docs/release-notes/5.18.0/changelog.mdx
+++ b/docs/release-notes/5.18.0/changelog.mdx
@@ -35,7 +35,7 @@ Write this.
 
 ## Headless CMS
 
-### A New Way To Hook Into Group, Model or Entry Lifecycle
+### A New Way To Hook Into Install, Group, Model or Entry Lifecycle
 
 We removed existing `InstallationPlugin`, `CmsContentModelHookPlugin` and `CmsContentEntryHookPlugin` support in favor of publish/subscribe pattern. Groups did not have lifecycle support, so we added those.
 
