feat(changelog): update cms notes

--- a/docs/release-notes/5.18.0/changelog.mdx
+++ b/docs/release-notes/5.18.0/changelog.mdx
@@ -46,7 +46,7 @@ To find out more about lifecycle events please read our [Lifecycle Events](/docs
 The team agreed on some new namings and, to accommodate that, we removed the `Content` word from all types, interfaces and classes.
 Names for some interfaces were changed a bit as well, for example, `ContentModelGroup` is now `CmsGroup`.
 
-There are probably a hundred or so types, interfaces and classes changed so listing them all would produce a non-readable piece of text, but here are the most important ones:
+There are probably a hundred or so types, interfaces and classes changed so listing them all would produce an unreadable piece of text, but here are the most important ones:
 * ContentModelPlugin -> CmsModelPlugin
 * ContentModelGroupPlugin -> CmsGroupPlugin
 * CmsModelFieldToStoragePlugin -> StorageTransformPlugin - and it is a class now
