wip: create changelog

--- a/docs/release-notes/5.18.0/changelog.mdx
+++ b/docs/release-notes/5.18.0/changelog.mdx
@@ -6,6 +6,8 @@ keywords: ["webiny", "version", "5.18.0", "changelog"]
 description: See what's new in Webiny version 5.18.0.
 ---
 
+import CenteredImage from "@components/CenteredImage";
+import webinyDynamoDb from "./images/webiny+dynamodb.png";
 
 # Changes
 
@@ -15,21 +17,57 @@ This document highlights the most important fixes, improvements, and features, t
 Please check the [Webiny 5.18.0 migration guide](/docs/release-notes/5.18.0/upgrade-guide) for the upgrade steps.
 :::
 
-## DynamoDB-only Version of Webiny Serverless CMS [WIP]
+## DynamoDB-only Version of Webiny Serverless CMS
 
-The highlight of this release - the new DynamoDB-only version of Webiny!
+<CenteredImage
+  src={webinyDynamoDb}
+  shadow={false}
+  style={{ maxWidth: 750 }}
+  canEnlarge={false}
+  title={`The highlight of this release - the new DynamoDB-only version of Webiny!`}
+/>
 
-As the name itself suggests, this new setup completely relies on DynamoDB for storing and retrieving data, making it 100% serverless! You no longer need to have Amazon ElasticSearch in the mix!
+The highlight of this release - the new [Amazon DynamoDB]-only version of Webiny Serverless CMS!
 
-This is especially important for smaller to medium-sized projects and also Webiny contributors.
+As the name itself suggests, this new setup completely relies on [Amazon DynamoDB](https://aws.amazon.com/dynamodb/) for storing and retrieving data!
+
+With the [Amazon ElasticSearch](https://aws.amazon.com/opensearch-service/the-elk-stack/what-is-elasticsearch/) no longer being a requirement, developers and organizations working on smaller and medium-sized projects can benefit from the following:
+
+- faster to get started
+- easier custom development
+- less maintenance
+- 100% serverless
+- cheaper - there are no fixed monthly costs, you only pay for what you use
+
+We also believe this new setup will make things a bit easier for developers who want to contribute to the project, which is something we've been passionate about from the very beginning of Webiny!
+
+To try the new DynamoDB-only version of Webiny, simply run the following command in your terminal of choice, and follow the on-screen instructions:
+
+```bash
+npx create-webiny-project my-webiny-projects
+```
+
+:::info
+For more installation-related information, you can also visit the updated [Install Webiny](/docs/tutorials/install-webiny) tutorial.
+:::
+
+We really hope you'll give this new version of Webiny Serverless CMS a try and that you'll love it. For any questions, suggestions, or general feedback, feel free to message us on our [community Slack channel](https://www.webiny.com/slack), we'd certainly love to hear from you!
+
 
 ## Development
 
 ### Overhaul of Existing Development Tools
 
-Write this.
+A complete overhaul was done on the most important development-related Webiny CLI commands - [`webiny deploy`](#) and [`webiny watch`](#). In short, you can expect both of these to be faster and also consume lot less system resources.
+
+In case you would like to learn more, feel free to check out the links to closed pull requests.
+
+### Pulumi Command - --json flag
+
+
 
 ### Watch Command - Changed `--logs` Flag
+
 
 Write this.
 
@@ -47,9 +85,10 @@ The team agreed on some new namings and, to accommodate that, we removed the `Co
 Names for some interfaces were changed a bit as well, for example, `ContentModelGroup` is now `CmsGroup`.
 
 There are probably a hundred or so types, interfaces and classes changed so listing them all would produce an unreadable piece of text, but here are the most important ones:
-* ContentModelPlugin -> CmsModelPlugin
-* ContentModelGroupPlugin -> CmsGroupPlugin
-* CmsModelFieldToStoragePlugin -> StorageTransformPlugin - and it is a class now
+
+- ContentModelPlugin -> CmsModelPlugin
+- ContentModelGroupPlugin -> CmsGroupPlugin
+- CmsModelFieldToStoragePlugin -> StorageTransformPlugin - and it is a class now
 
 :::note
 If you used some of renamed types, interfaces and classes your build/deploy will break, so just change them.
@@ -58,7 +97,6 @@ If you used some of renamed types, interfaces and classes your build/deploy will
 ## Page Builder
 
 ### Button Page Element - Ability to Register A Custom Callback Handler ([#2022](https://github.com/webiny/webiny-js/pull/2022))
-
 
 ## Documentation
 
@@ -69,8 +107,8 @@ Based on the feedback we've been getting from our users, we've decided to reorga
 Some of the changes are:
 
 -
-- articles are organized in a way that's more logica
 
+- articles are organized in a way that's more logica
 
 ### Create Custom Application - Security Tutorial ([#340](https://github.com/webiny/docs.webiny.com/pull/340))
 
