wip: create changelog

--- a/docs/release-notes/5.18.0/changelog.mdx
+++ b/docs/release-notes/5.18.0/changelog.mdx
@@ -8,6 +8,7 @@ description: See what's new in Webiny version 5.18.0.
 
 import CenteredImage from "@components/CenteredImage";
 import webinyDynamoDb from "./images/webiny+dynamodb.png";
+import pulumiCliJsonIssue from "./images/pulumi-cli-json-issue.png";
 
 # Changes
 
@@ -24,7 +25,7 @@ Please check the [Webiny 5.18.0 migration guide](/docs/release-notes/5.18.0/upgr
   shadow={false}
   style={{ maxWidth: 750 }}
   canEnlarge={false}
-  title={`The highlight of this release - the new DynamoDB-only version of Webiny!`}
+  title={"The highlight of this release - the new Amazon DynamoDB-only version of Webiny!"}
 />
 
 The highlight of this release - the new [Amazon DynamoDB]-only version of Webiny Serverless CMS!
@@ -53,23 +54,45 @@ For more installation-related information, you can also visit the updated [Insta
 
 We really hope you'll give this new version of Webiny Serverless CMS a try and that you'll love it. For any questions, suggestions, or general feedback, feel free to message us on our [community Slack channel](https://www.webiny.com/slack), we'd certainly love to hear from you!
 
-
 ## Development
 
-### Overhaul of Existing Development Tools
+### Overhaul of Existing Development Tools ([#1990](https://github.com/webiny/webiny-js/pull/1990), [#2028](https://github.com/webiny/webiny-js/pull/2028), [#1998](https://github.com/webiny/webiny-js/pull/1998), [#1989](https://github.com/webiny/webiny-js/pull/1989) )
 
-A complete overhaul was done on the most important development-related Webiny CLI commands - [`webiny deploy`](#) and [`webiny watch`](#). In short, you can expect both of these to be faster and also consume lot less system resources.
+A complete overhaul was done on the most important development-related Webiny CLI commands - [`webiny deploy`](/docs/how-to-guides/deployment/deploy-your-project) and [`webiny watch`](/docs/how-to-guides/use-watch-command). In short, you can expect both of these to be faster and also consume significantly less system resources.
 
-In case you would like to learn more, feel free to check out the links to closed pull requests.
+In case you would like to learn more, feel free to check out the links to closed pull requests:
 
-### Pulumi Command - --json flag
+- [`deploy` and `watch` Commands - Optimize the Build Step (#1990)](https://github.com/webiny/webiny-js/pull/1990)
+- [Further Optimizations of the Watch Command (#2028)](https://github.com/webiny/webiny-js/pull/2028)
+- [Revamped Package Build Processes (#1998)](https://github.com/webiny/webiny-js/pull/1998)
+- [Optimize Deployment of Admin Area Application (#1989)](https://github.com/webiny/webiny-js/pull/1989)
 
+### Pulumi Command - Improved Handling of `--json` Flag
 
+Previously, when invoking the Pulumi CLI via the [`webiny pulumi`](/docs/key-topics/webiny-cli#yarn-webiny-pulumi-folder---env-env----command) command and passing the `--json` flag to it, the final output would still include informative messages:
 
-### Watch Command - Changed `--logs` Flag
+<CenteredImage
+  src={pulumiCliJsonIssue}
+  shadow={false}
+  style={{ maxWidth: 750 }}
+  title={'Inappropriate output of the "webiny pulumi" command.'}
+/>
 
+Eventually, this would make it impossible to parse the output of the command, so we've ensured that whenever the `--json` flag is passed, that no additional informative messages are returned, only the actual JSON.
 
-Write this.
+### Watch Command - Renamed `--logs` Argument
+
+For the sake of consistency, the `--logs` argument has been renamed to `--remoteRuntimeLogs` (or `-r` for short). For example:
+
+```bash
+yarn webiny watch api --env dev --remoteRuntimeLogs
+```
+
+The existing `--logs` flag now serves a different purpose - it enables the code compilation-related logs.
+
+:::tip
+Learn more about remote runtime logs (logs forwarding) in the [Use the Watch Command](/docs/how-to-guides/use-watch-command#enabling-logs-forwarding) how-to guide.
+:::
 
 ## Headless CMS
 
