wip: create changelog

--- a/docs/release-notes/5.18.0/changelog.mdx
+++ b/docs/release-notes/5.18.0/changelog.mdx
@@ -121,17 +121,17 @@ If you used some of renamed types, interfaces and classes your build/deploy will
 
 ### Button Page Element - Ability to Register A Custom Callback Handler ([#2022](https://github.com/webiny/webiny-js/pull/2022))
 
+TODO
+
 ## Documentation
 
-### Reorganization of Existing Documentation Articles ([#347](https://github.com/webiny/docs.webiny.com/pull/347))
+### Reorganization of Existing Articles ([#347](https://github.com/webiny/docs.webiny.com/pull/347))
 
-Based on the feedback we've been getting from our users, we've decided to reorganize our documentation portal.
+Based on the feedback we've been getting from our users, we've decided to slightly reorganize the way articles are organized in our documentation portal.
 
-Some of the changes are:
+Essentially, more important articles are now located higher in the main menu, making them more visible and easier to discover. Also, some of the articles were transferred into different categories, ensuring a more natural and beneficial reading experience.
 
--
-
-- articles are organized in a way that's more logica
+We still have a couple of documentation-related improvements that we'd like to do, and we'll be releasing these out in the following weeks.
 
 ### Create Custom Application - Security Tutorial ([#340](https://github.com/webiny/docs.webiny.com/pull/340))
 
@@ -139,4 +139,4 @@ We've expanded our existing [Create Custom Application](/docs/tutorials/create-c
 
 As the title suggests, in this section we dive deeper into the security aspect of custom application development. We cover implementation of different concepts like authentication, authorization, deploying custom cloud infrastructure resources, [Amazon Cognito User Pools](https://docs.aws.amazon.com/cognito/latest/developerguide/cognito-user-identity-pools.html), and more!
 
-If you're interested in learning more about (serverless) custom application development with Webiny, then we definitely encourage you to check this out.
+If you're interested in learning more about (serverless) custom application development with Webiny, then we certainly encourage you to check this out.
