fix: update `--logs` flag

--- a/docs/how-to-guides/use-watch-command.mdx
+++ b/docs/how-to-guides/use-watch-command.mdx
@@ -128,20 +128,20 @@ While watching and developing project applications, it's not unusual to debug ce
 
 If not using the native Node.js debugger, usually we tend to place one or more `console.log` calls in our code and then run the application again. And although in serverless environments this is possible, when it comes to actually reading the logged data, the developer experience has shown to be a bit cumbersome and really not that straight forward.
 
-That's why, by appending the `--logs` argument, you can have all of your `console.log` calls stream logged information directly to your terminal. For example:
+That's why, by appending the `-r` argument, you can have all of your `console.log` calls stream logged information directly to your terminal. For example:
 
 ```bash
 # Starts watching the "api-headless-cms" package ("api/code/headlessCMS") and our
 # custom "api-cms-custom-field" package on which we're currently working on.
-yarn webiny watch api --env dev --logs
+yarn webiny watch api --env dev -r
 ```
 
-Note that this will stream logs from all cloud functions that were triggered while running and testing the code. If you start receiving more logs than expected, the `--logs` argument can also take a [`minimatch`](https://www.npmjs.com/package/minimatch) pattern, with which you can filter out the logs you don't wish to see. The following example will ensure only logs originating from the `api-graphql` function are shown:
+Note that this will stream logs from all cloud functions that were triggered while running and testing the code. If you start receiving more logs than expected, the `-r` argument can also take a [`minimatch`](https://www.npmjs.com/package/minimatch) pattern, with which you can filter out the logs you don't wish to see. The following example will ensure only logs originating from the `api-graphql` function are shown:
 
 ```bash
 # Starts watching the "api-headless-cms" package ("api/code/headlessCMS") and our
 # custom "api-cms-custom-field" package on which we're currently working on.
-yarn webiny watch api --env dev --logs="api-graphql*"
+yarn webiny watch api --env dev -r="api-graphql*"
 ```
 
 :::danger
